// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-form-components-validator appends missing address field if required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator appends missing address field with shipping address required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator appends missing tax id input if required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-tax-id-input></sc-order-tax-id-input>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator appends missing trial line item if required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-summary>
    <sc-line-item-trial></sc-line-item-trial>
    <sc-line-item-total total="subtotal"></sc-line-item-total>
  </sc-order-summary>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator renders 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
</sc-form-components-validator>
`;
